# adventofcode-2021

./: .editorconfig
golang/: go.mod  main.go
golang/aoc/: day01.go  day01_test.go  input.go
rust/: Cargo.toml
rust/src/: main.rs
rust/src/aoc/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.pest  day10.rs  day11.rs  day12.rs  day13.rs  input.rs  mod.rs
