[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"
default-run = "adventofcode2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.1"
itertools = "0.9.0"
pest = "2.0"
pest_derive = "2.0"
petgraph = "0.6.0"
recap = "0.1"
serde = "1.0"
